--- a/Client/HTML/index.html
+++ b/Client/HTML/index.html
@@ -23,8 +23,10 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="header-background">
         <div class="container">
+            <!-- Nav Header -->
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <a class="navbar-brand font-weight-bold" href="#">RLS</a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
@@ -32,6 +34,8 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <!-- Nav collapse -->
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
@@ -54,7 +58,12 @@
                         <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
+                <!-- Nav collapse -->
+                
             </nav>
+            <!-- Nav Header -->
+
+            <!-- Jumbotron Header -->
             <div class="jumbotron jumbotron-fluid">
                 <h1 class="display-5 font-weight-bold">Remote Learning System</h1>
                 <hr class="my-2">
@@ -67,13 +76,17 @@
                     <a class="btn btn-success btn-lg" href="#" role="button">Học Ngay</a>
                 </p>
             </div>
+            <!-- Jumbotron Header -->
+
         </div>
-
-
     </header>
-    <div class="container">
+    <!-- Header -->
 
-    </div>
+    <!-- Main -->
+    <main>
+
+    </main>
+    <!-- Main -->
 
     <!-- Footer -->
     <footer class="page-footer font-small stylish-color-dark pt-4">
