update header - footer

--- a/Client/HTML/index.html
+++ b/Client/HTML/index.html
@@ -59,7 +59,7 @@
                     </form>
                 </div>
                 <!-- Nav collapse -->
-                
+
             </nav>
             <!-- Nav Header -->
 
@@ -101,7 +101,7 @@
                 <div class="col-md-4 mx-auto">
 
                     <!-- Content -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Remote Learning System</h5>
+                    <h4 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Remote Learning System</h4>
                     <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio in assumenda
                         eligendi beatae hic vel cumque quas voluptates architecto a! Eveniet, dolorum? Ipsam eos,
                         quibusdam quod saepe neque recusandae earum.</p>
@@ -114,20 +114,20 @@
                 <div class="col-md-2 mx-auto">
 
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Links</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 ">Links</h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a class="text-light" href="#!">Link 1</a>
+                            <a  href="#!">Link 1</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 2</a>
+                            <a  href="#!">Link 2</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 3</a>
+                            <a  href="#!">Link 3</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 4</a>
+                            <a  href="#!">Link 4</a>
                         </li>
                     </ul>
 
@@ -140,20 +140,20 @@
                 <div class="col-md-2 mx-auto">
 
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Links</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 ">Links</h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a class="text-light" href="#!">Link 1</a>
+                            <a  href="#!">Link 1</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 2</a>
+                            <a  href="#!">Link 2</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 3</a>
+                            <a  href="#!">Link 3</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 4</a>
+                            <a  href="#!">Link 4</a>
                         </li>
                     </ul>
 
@@ -166,20 +166,20 @@
                 <div class="col-md-2 mx-auto">
 
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Links</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 ">Links</h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a class="text-light" href="#!">Link 1</a>
+                            <a  href="#!">Link 1</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 2</a>
+                            <a  href="#!">Link 2</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 3</a>
+                            <a  href="#!">Link 3</a>
                         </li>
                         <li>
-                            <a class="text-light" href="#!">Link 4</a>
+                            <a  href="#!">Link 4</a>
                         </li>
                     </ul>
 
@@ -200,7 +200,7 @@
                 <h5 class="mb-1 text-light">Register for free</h5>
             </li>
             <li class="list-inline-item">
-                <a href="#!" class="btn btn-danger btn-rounded text-light">Sign up!</a>
+                <a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
             </li>
         </ul>
         <!-- Call to action -->
@@ -239,7 +239,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#" class="text-light"> RLS Team</a>
+            <a href="#" > RLS Team</a>
         </div>
         <!-- Copyright -->
 
